[package]
name = "touch"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.18"
anyhow = "1.0.32"
pretty_env_logger = "0.4.0"
log = "0.4.11"
libc = "0.2.79"
cfg-if = "0.1.10"
filetime = "0.2.12"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
